# brian_claude

./: .gitignore  CLAUDE.md  README.md  history.jsonl  sdd-state-hook.sh  sdd-state.sh  settings.json  settings.local.json  stats-cache.json  statusline-command.sh
commands/: sdd-3-plan.md  (+7 more)
mcp-servers/conduit-websearch/: fetch_tools.py  pyproject.toml  server.py
skills/anki/study/: PLAN.md  README.md  pyproject.toml
skills/anki/study/prompts/: ask.md.j2
skills/anki/study/scripts/: cli.py  study.py
skills/anki/study/src/: db.py  display.py  llm.py  models.py  repo.py  scheduler.py  service.py
skills/anki/study/tests/: test_db.py  test_display.py  test_llm.py  test_repo.py  test_scheduler.py  test_service.py
skills/blog/: SKILL.md  pyproject.toml
skills/blog/deslop/: cli.py  fix.py  score.py
skills/blog/prompts/: judge.jinja2  reviser.jinja2
skills/blog/scripts/: deslop.py  slop.py
skills/licensing/gartner-pi/: DESIGN.md  PLAN.md  SKILL.md  gartner.py  pyproject.toml
skills/licensing/gartner-pi/cache/: product-ahrefs.json  product-airia-813846165.json  product-amazon-sagemaker-ai.json  product-aris.json  product-board.json  product-box.json  product-brightedge.json  product-c3-ai-platform.json  product-conductor-platform.json  product-conductorone-1.json  product-datarobot-agent-workforce-platform.json  product-h2o-ai-cloud.json  product-hackerrank.json  product-hugging-face.json  product-kyriba.json  product-langsmith.json  product-moz-pro.json  product-omnisci-platform.json  product-semrush-1020798628.json  product-seo-powersuite.json  product-seobility.json  product-seoclarity-platform.json  product-serpstat.json  product-systrack.json  product-workato-one.json  segment-list.json  slug-ahrefs.json  slug-arize-ai.json  slug-arize.json  slug-brightedge.json  slug-conductor-seo.json  slug-conductor.json  slug-datarobot.json  slug-h2o-ai.json  slug-hugging-face.json  slug-labelbox-data-labeling.json  slug-labelbox.json  slug-langsmith.json  slug-moz-pro.json  slug-moz.json  (+12 more)
skills/youtube/: SKILL.md  pyproject.toml
skills/youtube/scripts/: _cache.py  _models.py  _util.py  channel.py  video.py
skills/youtube/tests/: conftest.py  test_cache.py  test_channel.py  test_models.py  test_util.py  test_video.py
(+797 files in other folders)
