[project]
name = "conduit-websearch-mcp"
version = "0.1.0"
description = "MCP server exposing Conduit's web_search and fetch_url tools"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.1.2",
    "httpx>=0.27.0",
    "readabilipy>=0.2.0",
    "markdownify>=0.13.0",
    "markitdown>=0.0.1a2",
]
