[project]
name = "deslop"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["conduit"]

[project.scripts]
deslop = "deslop.cli:main"

[tool.setuptools.packages.find]
include = ["deslop*"]

[tool.uv.sources]
conduit = { path = "/Users/bianders/Brian_Code/conduit-project", editable = true }

