[project]
name = "youtube"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp",
    "faster-whisper",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires network access and YOUTUBE_API_KEY",
]
