[project]
name = "gartner-pi"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.44.0",
    "playwright-stealth>=2.0.0,<3.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
